  that classpath resources do not have to be in a jar file
- Added support for JSR-223 (javax.script) compatible scripting languages
  through configuration only (in moqui-conf file) so no ScriptRunner
  interface implementation is needed for these
- Added support for JavaScript (.js) server-side scripts through
  javax.script interface

Bug Fixes:

- Removed emailTypeEnumId from the PK of the EmailMessage entity, it
  should not have been there and is not needed (or wanted); this PK
  change will require modifying or rebuilding that table in existing
  systems
- Fixed issue with handling entities in different packages that have the
  same name
- Instead of submit buttons always having name=submit, they now use the
  name of the XML Form field; to see if one button or another was pressed
  just check to see if the parameter was passed; also changed all submit
  field names to submitButton to avoid conflict with standard DOM function
  "submit" for form elements (thanks to Vasanth for reporting this)
- Fixed bad reference to ComparisonOperator in DateCondition class
- Fixed issue with settings nulls in an entity-auto update service or
  anywhere the dbValueMap is not populated from the database
- Fixed bug (#3442014) with funny FTL eval of label.@encode attribute
- Fixed issue with ResourceFacade classpath:// URLs that were not using
  thread's context ClassLoader, and so weren't finding classpath entries
  in runtime or component lib and classes directories
- Fixed issue with ResourceReference, TemplateRenderer, ScriptRunner,
  ServiceRunner, and Java service implementation class loading to use the
  current Thread's context ClassLoader which will get the component and
  runtime lib and classes resources
- Fixed issue where automatic reverse relationship did not work for full
  entity names
- Fixed issue with findRelated and findRelatedOne when forUpdate is null


===========================================================================